Docs: Add code to cancel maximum width for media elements

--- a/website/app/[locale]/(root)/docs/global-styles/content.mdx
+++ b/website/app/[locale]/(root)/docs/global-styles/content.mdx
@@ -198,6 +198,11 @@ Preset the maximum width of media-related elements to the parent container to ma
 </Code>
 Browsers default these elements to `inline` display. `block` can be centered using common tricks like `margin: auto`.
 
+For media that needs to overflow the container, you can cancel the maximum width by selecting descendants:
+```html
+<article class="**max-w:none_:where(img)**">…</article>
+```
+
 ---
 
 ## Using syntax
