Add size, min-size, and max-size documentation

--- a/website/app/[locale]/(root)/docs/screen-sizes/content.mdx
+++ b/website/app/[locale]/(root)/docs/screen-sizes/content.mdx
@@ -8,7 +8,7 @@
         </Code>
     </div>
 </details>
-Apply the default screen variables using size-related syntax.
+Apply the default screen variables using any syntax:
 ```html
 <div class="**w:screen-sm** **max-w:screen-lg**">…</div>
 ```
@@ -27,7 +27,7 @@ export default {
     }
 }
 ```
-Apply the defined `screen` variables anywhere.
+Apply the defined `screen` variables anywhere:
 ```html
 <div class="**max-w:screen-desktop** mx:auto">…</div>
 ```
