--- a/website/app/[locale]/(root)/roadmap/content.mdx
+++ b/website/app/[locale]/(root)/roadmap/content.mdx
@@ -68,7 +68,7 @@ Our goal for our upcoming v2 docs is to present a comprehensive and elegantly cr
             <Documents category='Performance' />
             <Documents category='Scroll' />
             <Documents category='Shape' />
-            <Documents category='Sizing' />
+            <Documents category='Dimensions' />
             <Documents category='Spacing' />
             <Documents category='Svg' />
             <Documents category='Tables' />
