Update spacing and sizing metadata and components

--- a/website/app/[locale]/(root)/docs/spacing-and-sizing/content.mdx
+++ b/website/app/[locale]/(root)/docs/spacing-and-sizing/content.mdx
@@ -1,31 +1,32 @@
 ## Using spacing scale [sr-only]
-The spacing system is constructed using a [base unit](/docs/configuration#baseunit) of **4 pixels**. For visual consistency, you can use the multiplier unit `x` to apply spacing with the same scale.
+The spacing and sizing system is constructed using a [base unit](/docs/configuration#baseunit) of **4 pixels**. For visual consistency, you can use the multiplier unit `x` to apply spacing with the same scale.
 ```html
 <div class="m:**1x**">4px, margin: 0.25rem</div>
 <div class="p:**2x**">8px, padding: 0.5rem</div>
 <div class="gap:**3x**">12px, gap: 0.75rem</div>
-...
+<div class="w:**8x**">32px, width: 2rem</div>
+<div class="size:**6x**">24px, width: 1.5rem; height: 1.5rem</div>
 ```
 <Reference />
-For other common spacing, `0`, `1`, `2`, ..., we tend to use unitless tokens:
+For other common sizes, `0`, `1`, `2`, ..., we tend to use unitless tokens:
 ```html
 <div class="m:**0**">0px, margin: 0rem</div>
 <div class="p:**1**">1px, padding: 0.0625rem</div>
-<div class="gap:**2**">2px, gap: 0.125rem</div>
+<div class="w:**2**">2px, width: 0.125rem</div>
 ...
 ```
-(x) Unlike traditional, there's no longer a need to define spacing scale one by one.
+(x) It's no longer necessary to define the spacing scale one by one as in the traditional way.
 ```js name=master.css.js
-- export default {
--     variables: {
--         spacing: {
--             '1x': 4,
--             '2x': 8,
--             ...,
--             '100x': 400
--         }
--     }
-- }
+export default {
+    variables: {
+        spacing: {
+-            '1x': 4,
+-            '2x': 8,
+-            ...,
+-            '100x': 400
+        }
+    }
+}
 ```
 
 ---
