Update image sizes in HTML files

--- a/website/app/[locale]/(root)/roadmap/content.mdx
+++ b/website/app/[locale]/(root)/roadmap/content.mdx
@@ -7,7 +7,7 @@ import version from '~/version';
 
 ## Current
 1. <del>Alpha － 2.0.0-alpha.80</del>
-2. **Beta － [{version}](https://github.com/master-co/css/releases)** <svg className="ml:5 inline-block v:middle fill:green-75 8x8 overflow:visible" viewBox="0 0 8 8" xmlns="http://www.w3.org/2000/svg"><circle className="@ping|1s|infinite transform:center" cx="4" cy="4" r="4" /><circle cx="4" cy="4" r="4" /></svg>
+2. **Beta － [{version}](https://github.com/master-co/css/releases)** <svg className="ml:5 inline-block v:middle fill:green-75 size:2x overflow:visible" viewBox="0 0 8 8" xmlns="http://www.w3.org/2000/svg"><circle className="@ping|1s|infinite transform:center" cx="4" cy="4" r="4" /><circle cx="4" cy="4" r="4" /></svg>
 3. Release Candidate － 2.0.0-rc.1
 4. Stable － 2.0.0
 
