--- a/website/app/[locale]/(root)/docs/animation/content.mdx
+++ b/website/app/[locale]/(root)/docs/animation/content.mdx
@@ -16,7 +16,7 @@ Use the `ping` animation to indicate that the shop is open.
     <div className="app-panel rel">
         <Image src="/images/vegetable-salad-in-bowls.jpg" width="400" height="250" className="aspect:400/250 untouchable" alt="vegetable salad in bowls" />
         <div className="fg:major abs bottom:0 w:full p:50|35|30|35 gradient(0deg,base|0%,base/0|100%)">
-            <svg className="inline-block fill:green-75 8x8 overflow:visible" viewBox="0 0 8 8" xmlns="http://www.w3.org/2000/svg">
+            <svg className="inline-block fill:green-75 size:2x overflow:visible" viewBox="0 0 8 8" xmlns="http://www.w3.org/2000/svg">
                 <circle className="@ping|1s|infinite transform:center" cx="4" cy="4" r="4" />
                 <circle cx="4" cy="4" r="4" />
             </svg>
@@ -26,7 +26,7 @@ Use the `ping` animation to indicate that the shop is open.
     </div>
 </Demo>
 ```html
-<svg class="inline-block fill:green-75 8x8 overflow:visible" viewBox="0 0 8 8" xmlns="http://www.w3.org/2000/svg">
+<svg class="inline-block fill:green-75 size:2x overflow:visible" viewBox="0 0 8 8" xmlns="http://www.w3.org/2000/svg">
     <circle class="**@ping|1s|infinite** transform:center" cx="4" cy="4" r="4" />
     <circle cx="4" cy="4" r="4" />
 </svg>
