--- a/website/app/[locale]/(root)/docs/colors/content.mdx
+++ b/website/app/[locale]/(root)/docs/colors/content.mdx
@@ -19,7 +19,7 @@ Apply them using color-related syntax like [`fg:`](/docs/color).
 <div class="**fg:primary** …">
 <div class="**fg:secondary** …">
 <div class="**fg:accent** …">
-<div class="**fg:major** …">
+<div class="**fg:strong** …">
 <div class="**fg:neutral** …">
 ```
 
