--- a/website/app/[locale]/(root)/roadmap/content.mdx
+++ b/website/app/[locale]/(root)/roadmap/content.mdx
@@ -102,7 +102,7 @@ Redesign the homepage according to the features of v2.
 ## FAQs
 <details>
     <summary>When is v2 expected to arrive?</summary>
-    <div className='b:1|divider p:3x|8x r:1x mt:2x'>
+    <div className='b:1|frame p:3x|8x r:1x mt:2x'>
         Throughout the Beta phase, Master CSS v2.0 introduced many essential functions, services, and framework compatibility enhancements. Many of these underwent refactoring as part of the development journey or were fine-tuned in response to valuable input from the community.
 
         Since the syntax and API of Master CSS are expected to be in use for many years, even though v2 is nearing completion, it will take us some time to validate its market acceptance and solidify its foundation.
@@ -122,20 +122,20 @@ Redesign the homepage according to the features of v2.
 </details>
 <details>
     <summary>Is it stable enough for now?</summary>
-    <div className='b:1|divider p:3x|8x r:1x mt:2x'>
+    <div className='b:1|frame p:3x|8x r:1x mt:2x'>
         Only one breaking change remains during the beta, [Color Palette](#-color-palette). If you don't mind or are not affected by it, you can start using Master CSS in production!
     </div>
 </details>
 <details>
     <summary>How to keep track of the latest updates?</summary>
-    <div className='b:1|divider p:3x|8x r:1x mt:2x'>
+    <div className='b:1|frame p:3x|8x r:1x mt:2x'>
         - [GitHub Releases](https://github.com/master-co/css/releases) － We've beautified the release changelog, which notes any version and package detailed changes.
         - [Docs - Discord Channel](https://discord.com/channels/917780624314613760/1144544204979175626) － We'll post the latest documentation updates in the #docs channel in the Master discord server.
     </div>
 </details>
 <details>
     <summary>How to prevent version change conflicts?</summary>
-    <div className='b:1|divider p:3x|8x r:1x mt:2x'>
+    <div className='b:1|frame p:3x|8x r:1x mt:2x'>
         When using a CDN in production, pining the current version to avoid potential conflicts due to version changes is strongly recommended, like so:
         <Code lang="html">
         {
@@ -146,7 +146,7 @@ Redesign the homepage according to the features of v2.
 </details>
 <details>
     <summary>Where is the source code of the documentation?</summary>
-    <div className='b:1|divider p:3x|8x r:1x mt:2x'>
+    <div className='b:1|frame p:3x|8x r:1x mt:2x'>
         The official [documentation is now open source](https://github.com/master-co/css/tree/beta/website/app/%5Blocale%5D/(root)/docs); welcome to contribute your expertise.
     </div>
 </details>
