Update animation and color styles

--- a/website/app/[locale]/(root)/docs/animation-name/content.mdx
+++ b/website/app/[locale]/(root)/docs/animation-name/content.mdx
@@ -4,6 +4,6 @@
 ## Conditionally apply
 Apply styles based on different states using [selectors](/docs/state-selectors) and [conditional queries](/docs/conditional-queries).
 ```html
-<div class="@name:fade**:hover** @name:fade**@sm** @name:fade**@dark** @name:fade**@print**">…</div>
+<div class="@name:light**:hover** @name:light**@sm** @name:light**@dark** @name:light**@print**">…</div>
 ```
 
