--- a/website/app/[locale]/(root)/docs/animation/content.mdx
+++ b/website/app/[locale]/(root)/docs/animation/content.mdx
@@ -3,7 +3,7 @@
 
 Simplify the native syntax using the derived symbol and multi-style shorthand.
 ```html
--<div class="animation:fade|1s">
+-<div class="animation:light|1s">
 +<div class="@fade|1s">
 ```
 
