--- a/website/app/[locale]/(root)/docs/state-selectors/content.mdx
+++ b/website/app/[locale]/(root)/docs/state-selectors/content.mdx
@@ -54,7 +54,7 @@ Select and style elements using `:first`, `:last`, `:odd`, `:even`, and `:nth(N)
     <DemoPanel $p={0} className="w:full max-w:360">
         <ul className="list-style:none p:20|0 m:0">
             {furnitures.map((furniture, index) =>
-                <li className="bb:0:last bg:fade/.05:even bb:1|solid|slate-90 b:gray-28!@dark px:25 flex align-items:center my:0 gap:12" key={index}>
+                <li className="bb:0:last bg:light/.05:even bb:1|solid|slate-90 b:gray-28!@dark px:25 flex align-items:center my:0 gap:12" key={index}>
                     <img className="round object:cover" src={furniture.url} width="56" height="56" alt="avatar" quality={'0'} />
                     <div className="flex flex:col flex:1 py:10">
                         <div className="flex align-items:center">
