--- a/website/app/[locale]/(root)/docs/background-color/content.mdx
+++ b/website/app/[locale]/(root)/docs/background-color/content.mdx
@@ -4,6 +4,6 @@
 ## Conditionally apply
 Apply styles based on different states using [selectors](/docs/state-selectors) and [conditional queries](/docs/conditional-queries).
 ```html
-<div class="background-color:fade-10**:hover** background-color:fade-10**@sm** background-color:fade-10**@dark** background-color:fade-10**@print**">…</div>
+<div class="background-color:light-10**:hover** background-color:light-10**@sm** background-color:light-10**@dark** background-color:light-10**@print**">…</div>
 ```
 
