Update color variables and add text-colors module

--- a/website/app/[locale]/(root)/docs/color/content.mdx
+++ b/website/app/[locale]/(root)/docs/color/content.mdx
@@ -3,30 +3,12 @@
 
 ## Basic usage
 ### Color tokens
-Change the text color of an element using the preset [color variables](/docs/colors).
+Change the text color of an element using the default [color variables](/docs/colors).
 <Demo>
-    <div className="fg:code-blue font:56 font:heavy">Aa</div>
+    <div className="fg:blue font:56 font:heavy">Aa</div>
 </Demo>
 ```html
-<div class="**fg:blue-55**">Aa</div>
-```
-
-### RGB
-Change the text color of an element using RGB color code.
-<Demo>
-    <div className="fg:code-blue font:56 font:heavy">Aa</div>
-</Demo>
-```html
-<p class="**fg:rgb(23,95,233)**">Aa</p>
-```
-
-### HSL
-Change the text color of an element using HSL color code.
-<Demo>
-    <div className="fg:code-blue font:56 font:heavy">Aa</div>
-</Demo>
-```html
-<p class="**fg:hsl(219|83%|50%)**">Aa</p>
+<div class="**fg:blue**">Aa</div>
 ```
 
 ---
